# c_vs_rust

./: .gitignore  LICENSE  README.md
mandel_c/: .gitignore  bitmap.h  main.c  makefile
mandel_rs/: .gitignore  Cargo.toml
mandel_rs/src/: bitmap.rs  main.rs
