[package]
name = "mandel_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"

[profile.release]
strip = true
lto = true
# opt-level = 's'
# debug = 1
# panic = 'abort'
# incremental = true
# codegen-units = 256
