[package]
name = "mandel_rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# strip = true
lto = true
# opt-level = 's'
# debug = 1
# panic = 'abort'
# incremental = true
# codegen-units = 256
